<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/app_background_black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_margin_top">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title_text"
            style="@style/title" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_text_margin_top"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_account_hint"
            style="@style/edit_text_mod_1" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_password_margin_top"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            style="@style/edit_text_mod_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/button_login_text"
            style="@style/button_mod_1" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/button_register_margin_top"
            android:text="@string/button_register_text"
            style="@style/button_mod_1" />
    </LinearLayout>
</LinearLayout>